@@ -40,17 +40,17 @@ Game *cur_game = 0;
 /***** LOCAL VARIABLES *****************************************************/
 
 static GameDiff diffs[DIFF_COUNT] = {
-    { 9, 12,  8, 12, 20,  5, 0.10, 0.0016, 0.20, 32000, 0 },
-    { 6,  9,  0,  2,  8,  8, 0.24, 0.0016, 0.40, 1800,  1 },
-    { 5,  7,  0,  1,  6, 10, 0.27, 0.0016, 0.43, 1800,  1 },
-    { 4,  5,  0,  1,  4, 13, 0.30, 0.0015, 0.45, 1800,  1 }
+    { 9, 12,  8, 12, 20,  5, 0.10, 0.0016, 0.20, 32000, 0, 4 },
+    { 6,  9,  0,  2,  8,  8, 0.24, 0.0016, 0.40, 1800,  1, 1 },
+    { 5,  7,  0,  1,  6, 10, 0.27, 0.0016, 0.43, 1800,  1, 1 },
+    { 4,  5,  0,  1,  4, 13, 0.30, 0.0015, 0.45, 1800,  1, 1 }
 };
 
 /* in network game the ball is slower and the paddle is bigger */
 static GameDiff net_diffs[DIFF_COUNT] = {
-    { 6, 9, 1, 2, 8, 8,  0.18, 0.0012, 0.30, 1800, 1 },
-    { 5, 7, 1, 2, 6, 10, 0.21, 0.0012, 0.33, 1800, 1 },
-    { 4, 5, 1, 2, 4, 13, 0.24, 0.0011, 0.35, 1800, 1 }
+    { 6, 9, 1, 2, 8, 8,  0.18, 0.0012, 0.30, 1800, 1, 1 },
+    { 5, 7, 1, 2, 6, 10, 0.21, 0.0012, 0.33, 1800, 1, 1 },
+    { 4, 5, 1, 2, 4, 13, 0.24, 0.0011, 0.35, 1800, 1, 1 }
 };
 
 /***** LOCAL FUNCTIONS *****************************************************/
